--- a/dockerfiles/Dockerfile.trojan_server
+++ b/dockerfiles/Dockerfile.trojan_server
@@ -15,12 +15,11 @@ RUN apt-get -y update && apt-get -y install \
     trojan \
     procps
 
-COPY server.json /etc/trojan/server.json
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY certs /etc/trojan/certs
 COPY trojan.sh /root/trojan.sh
 
-RUN chmod +777 /root/trojan.sh
+RUN chmod +777 /root/trojan.sh && mv /etc/trojan/config.json /etc/trojan/server.json
 
 CMD ["/root/trojan.sh"]
 
