main.py: add class DockerSetup; config.json: add 'host_config'

--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
+    "host_config": {
+        "user":"",
+        "password":""
+    },
     "nginx_config": {
         "listen_port": 443
     },
